[package]
name = "vappjs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
serde_json = "1.0"
base64 = "0.21.5"
urlencoding = "2.1.3"
tauri-plugin-clipboard-manager = "2.0.0-alpha.4"
regex = "1.10.2"
xml-rs = "0.8.19"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
url = "2.5.0"
x509-parser = "0.15.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
